--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: myregistry/my-app:latest
+        image: angarosxx/my-app:latest
         ports:
         - containerPort: 80
         resources:
